[project]
name = "gmsh-stubs"
version = "4.15.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@umich.edu" }]
requires-python = ">=3.14"
dependencies = ["optype[numpy]"]
license = { file = "LICENSE" }

[project.optional-dependencies]
gmsh = ["gmsh==4.15.1"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
